Changed the way DesktopSettings work: * Removed the DesktopSettings lock itself - it's not really needed at all,   and causes some trouble with a clean locking design. This may even have   fixed bug #757, at least I couldn't reproduce it anymore. * There is now a class for read-only access that requires you to have locked   the desktop (either read or write). * There is now another class LockedDesktopSettings that allows you to set   settings (and only that) - when you're changing the settings, you must not   have read locked the desktop (ie. hold the single window lock). The class   will obtain a write lock, but write locks can be nested. * Moved SetWorkspacesCount() into the Desktop class.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18646 a95241bf-73f2-0310-859d-f6bbb57e9c96