src/servers/app/DesktopSettings.h
@@ -14,6 +14,7 @@
 #include <Message.h>
 
 class Desktop;
+class DesktopSettingsPrivate;
 class ServerFont;
 
 
@@ -30,40 +31,47 @@ enum {
 class DesktopSettings {
 	public:
 		DesktopSettings(Desktop* desktop);
-		~DesktopSettings();
 
 		status_t		Save(uint32 mask = kAllSettings);
 
-		void			SetDefaultPlainFont(const ServerFont& font);
 		void			GetDefaultPlainFont(ServerFont& font) const;
-
-		void			SetDefaultBoldFont(const ServerFont& font);
 		void			GetDefaultBoldFont(ServerFont& font) const;
-
-		void			SetDefaultFixedFont(const ServerFont& font);
 		void			GetDefaultFixedFont(ServerFont& font) const;
 
-		void			SetScrollBarInfo(const scroll_bar_info& info);
 		void			GetScrollBarInfo(scroll_bar_info& info) const;
-
-		void			SetMenuInfo(const menu_info& info);
 		void			GetMenuInfo(menu_info& info) const;
 
-		void			SetMouseMode(mode_mouse mode);
 		mode_mouse		MouseMode() const;
 		bool			FocusFollowsMouse() const;
 
-		void			SetWorkspacesCount(int32 number);
 		int32			WorkspacesCount() const;
-
-		void			SetWorkspacesMessage(int32 index, BMessage& message);
 		const BMessage*	WorkspacesMessage(int32 index) const;
 
 	private:
-		class Private;
-		friend class Desktop;
+//		friend class Desktop;
 
-		Private*		fSettings;
+		DesktopSettingsPrivate*	fSettings;
+};
+
+class LockedDesktopSettings {
+	public:
+		LockedDesktopSettings(Desktop* desktop);
+		~LockedDesktopSettings();
+
+		void			SetDefaultPlainFont(const ServerFont& font);
+		void			SetDefaultBoldFont(const ServerFont& font);
+		void			SetDefaultFixedFont(const ServerFont& font);
+
+		void			SetScrollBarInfo(const scroll_bar_info& info);
+		void			SetMenuInfo(const menu_info& info);
+
+		void			SetMouseMode(mode_mouse mode);
+
+	private:
+//		friend class Desktop;
+
+		DesktopSettingsPrivate*	fSettings;
+		Desktop*		fDesktop;
 };
 
 #endif	/* DESKTOP_SETTINGS_H */
